# concurrente

./: .gitignore  .gitmodules
Notas/: 02.-Fork-Join.md  03.-Programación Asincrónica.md  04.-Locks.md  05.-Sincronización.md  06.-Redes de Petri.md  1.-Intro a la concurrencia.md
TPs/2024-1c-tp1-Rpetey317/: .gitignore  Cargo.toml  README.md  todo.md
TPs/2024-1c-tp1-Rpetey317/src/: full_summary.rs  main.rs  parser.rs  site_summary.rs  tag_summary.rs
TPs/2024-1c-tp1-Rpetey317/test_data/: site1.jsonl  site2.jsonl  (+2 more)
TPs/2024-1c-tp2-la-real/: Cargo.toml  README.md
TPs/2024-1c-tp2-la-real/ice_cream_shop/: Cargo.toml
TPs/2024-1c-tp2-la-real/ice_cream_shop/src/: main.rs
TPs/2024-1c-tp2-la-real/ice_cream_shop/src/shop_connection/: mod.rs  robot_communicator.rs  robot_listener.rs  stock_requester.rs
TPs/2024-1c-tp2-la-real/ice_cream_shop/src/shop_stock/: active_order.rs  mod.rs  stock_manager.rs
TPs/2024-1c-tp2-la-real/ice_cream_shop/src/utils/: arg_parsing.rs  command_interpreter.rs  mod.rs  setup_shop.rs
TPs/2024-1c-tp2-la-real/robot/: Cargo.toml
TPs/2024-1c-tp2-la-real/robot/src/: lib.rs  main.rs
TPs/2024-1c-tp2-la-real/robot/src/ice_cream_robot/: ice_cream_shop_connection.rs  ice_cream_shop_connector.rs  manage_robot_connection.rs  mod.rs  robot_constants.rs  robot_handler.rs  robot_to_robot_connection.rs  robot_to_robot_connector.rs  robot_to_screen_connection.rs  robot_to_screen_connector.rs  user_input.rs
TPs/2024-1c-tp2-la-real/screen/: Cargo.toml
TPs/2024-1c-tp2-la-real/screen/docs_ejemplo/: helados.csv  test_multiple_line.csv  test_single_line.csv
TPs/2024-1c-tp2-la-real/screen/src/: lib.rs  main.rs
TPs/2024-1c-tp2-la-real/screen/src/screen_implementation/: mod.rs  screen_connection_handler.rs  screen_constants.rs  screen_order_manager.rs  screen_order_parser.rs  screen_payment_system.rs  screen_to_robot_connection.rs  screen_to_robot_connector.rs  screen_working_order.rs  user_input.rs
TPs/tp0-practice/: Cargo.toml
(+15 files in other folders)
