[package]
name = "ice-cream-shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
actix = "0.13.5"
tokio = { version = "1.38.0", features = ["fs"] }
tokio-stream = { version = "^0.1.15", features = ["io-util"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-core = "0.1.32"
rand = "0.8.5"
chrono = "0.4.38"
actix-rt = "2.10.0"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
