[package]
name = "screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
actix = "0.13.5"
actix-rt = "2.10.0"
csv = "1.1"
rand = "0.8"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "^1", features = ["full"] }
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
serde_json = "1.0.117"
